Update fixing worklflow errors

--- a/.github/workflows/customer-loyalty-agent.yml
+++ b/.github/workflows/customer-loyalty-agent.yml
@@ -48,7 +48,8 @@ jobs:
 
     - name: Execute Customer Loyalty Agent Initializer
       run: |
-        python src/app/agents/customerLoyaltyAgent_initializer.py
+        cd src
+        python app/agents/customerLoyaltyAgent_initializer.py
 
     - name: Clean up .env file
       if: always()
