Update shopper agent workflow

--- a/.github/workflows/shopper-agent.yml
+++ b/.github/workflows/shopper-agent.yml
@@ -41,7 +41,9 @@ jobs:
 
     - name: Create .env file from secret
       run: |
-        echo "${{ secrets.ENV }}" > src/.env
+        cat > src/.env << 'EOF'
+        ${{ secrets.ENV }}
+        EOF
       shell: bash
 
     - name: Execute Shopper Agent Initializer
